# CA_4

./: CMakeLists.txt
client/: client  client.cpp  client_utility.py  makefile
serialization/: serialization.hpp
server/: makefile  server  server.cpp
server/server_asio/: makefile  server.cpp
task/: task.hpp
tests/: makefile  tests  tests.cpp
